# llm-log-service

./: .gitignore  pyproject.toml  start_service.sh
backend/: main.py
backend/api/endpoints/v1/: chat_message_service.py
backend/database/: chat_message_sqlite.py  chat_message_tinydb.py
backend/resources/: chat_messages.json
backend/resources/tinydb/: 2025-09-15.json  2025-09-21.json
backend/schemas/: chat_message.py
frontend/stui/: home.py
tests/random/: format_json.py  run.py  system_prompt.txt
tests/random/cases/: normal.json  random.json
